--- a/actix-testing/Cargo.toml
+++ b/actix-testing/Cargo.toml
@@ -2,32 +2,19 @@
 name = "actix-testing"
 version = "0.1.0"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
-description = "Actix test server"
+description = "Actix testing utils"
 keywords = ["network", "framework", "async", "futures"]
 homepage = "https://actix.rs"
 repository = "https://github.com/actix/actix-net.git"
 documentation = "https://docs.rs/actix-testing/"
 categories = ["network-programming", "asynchronous"]
 license = "MIT/Apache-2.0"
-exclude = [".gitignore", ".travis.yml", ".cargo/config", "appveyor.yml"]
 edition = "2018"
 workspace = ".."
-
-[package.metadata.docs.rs]
-features = ["ssl", "tls", "rust-tls"]
 
 [lib]
 name = "actix_testing"
 path = "src/lib.rs"
-
-[features]
-default = []
-
-# openssl
-ssl = ["openssl", "actix-server/ssl"]
-
-# rustls
-rust-tls = ["rustls", "tokio-rustls", "webpki", "webpki-roots"]
 
 [dependencies]
 actix-rt = "0.2.1"
@@ -40,12 +27,3 @@ net2 = "0.2"
 futures = "0.1"
 tokio-tcp = "0.1"
 tokio-reactor = "0.1"
-
-# openssl
-openssl = { version="0.10", optional = true }
-
-#rustls
-rustls = { version = "^0.15", optional = true }
-tokio-rustls = { version = "^0.9", optional = true }
-webpki = { version = "0.19", optional = true }
-webpki-roots = { version = "0.16", optional = true }
