--- a/actix-ioframe/Cargo.toml
+++ b/actix-ioframe/Cargo.toml
@@ -29,7 +29,7 @@ log = "0.4"
 [dev-dependencies]
 actix-rt = "0.2.2"
 actix-connect = "0.2.0"
-actix-test-server = "0.2.2"
+actix-testing = "0.1.0"
 actix-server-config = "0.1.1"
 tokio-tcp = "0.1"
 tokio-timer = "0.2"
