--- a/actix-test-server/Cargo.toml
+++ b/actix-test-server/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "actix-test-server"
-version = "0.2.2"
+version = "0.2.3"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
 description = "Actix test server"
 keywords = ["network", "framework", "async", "futures"]
@@ -11,7 +11,6 @@ categories = ["network-programming", "asynchronous"]
 license = "MIT/Apache-2.0"
 exclude = [".gitignore", ".travis.yml", ".cargo/config", "appveyor.yml"]
 edition = "2018"
-workspace = ".."
 
 [lib]
 name = "actix_test_server"
@@ -21,6 +20,7 @@ path = "src/lib.rs"
 actix-rt = "0.2.1"
 actix-server = "0.5.0"
 actix-server-config = "0.1.0"
+actix-testing = "0.1.0"
 
 log = "0.4"
 net2 = "0.2"
