--- a/actix-connect/Cargo.toml
+++ b/actix-connect/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "actix-connect"
-version = "0.3.0"
+version = "1.0.0-alpha.1"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
-description = "Actix Connector - tcp connector service"
+description = "Actix connect - tcp connector service"
 keywords = ["network", "framework", "async", "futures"]
 homepage = "https://actix.rs"
 repository = "https://github.com/actix/actix-net.git"
@@ -14,7 +14,7 @@ edition = "2018"
 workspace = ".."
 
 [package.metadata.docs.rs]
-features = ["ssl", "uri"]
+features = ["openssl", "rustls", "uri"]
 
 [lib]
 name = "actix_connect"
@@ -24,38 +24,41 @@ path = "src/lib.rs"
 default = ["uri"]
 
 # openssl
-ssl = ["openssl", "tokio-openssl"]
+openssl = ["open-ssl", "tokio-openssl"]
 
 #rustls
-rust-tls = ["rustls", "tokio-rustls", "webpki"]
+rustls = ["rust-tls", "tokio-rustls", "webpki"]
 
 # support http::Uri as connect address
 uri = ["http"]
 
 [dependencies]
-actix-service = "0.4.0"
-actix-codec = "0.1.2"
-actix-utils = "0.4.0"
-actix-rt = "0.2.5"
+actix-service = "1.0.0-alpha.1"
+actix-codec = "0.2.0-alpha.1"
+actix-utils = "0.5.0-alpha.1"
+actix-rt = "1.0.0-alpha.1"
 derive_more = "0.15"
 either = "1.5.2"
-futures = "0.1.25"
+futures = "0.3.1"
+pin-project = "0.4.5"
 http = { version = "0.1.17", optional = true }
 log = "0.4"
-tokio-tcp = "0.1.3"
-tokio-current-thread = "0.1.5"
-trust-dns-resolver = { version="0.11.0", default-features = false }
+tokio-net = "=0.2.0-alpha.6"
+tokio-executor = "=0.2.0-alpha.6"
+trust-dns-resolver = { version="0.18.0-alpha.1", default-features = false }
 
 # openssl
-openssl = { version="0.10", optional = true }
-tokio-openssl = { version="0.3", optional = true }
+open-ssl = { version="0.10", package = "openssl", optional = true }
+tokio-openssl = { version = "0.4.0-alpha.6", optional = true }
 
 #rustls
-rustls = { version = "0.16.0", optional = true }
-tokio-rustls = { version = "0.10.0", optional = true }
+rust-tls = { version = "0.16.0", package = "rustls", optional = true }
+# tokio-rustls = { version = "0.10.0", optional = true }
+tokio-rustls = { git = "https://github.com/quininer/tokio-rustls.git", branch = "tokio-0.2", optional = true }
 webpki = { version = "0.21", optional = true }
 
 [dev-dependencies]
 bytes = "0.4"
-actix-testing = { version="0.2.0" }
-actix-server-config = "0.2.0"
+actix-testing = { version="0.3.0-alpha.1" }
+actix-server-config = "0.3.0-alpha.1"
+tokio = "0.2.0-alpha.6"
