--- a/actix-rt/Cargo.toml
+++ b/actix-rt/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "actix-rt"
-version = "0.2.6"
+version = "1.0.0-alpha.1"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
 description = "Actix runtime"
 keywords = ["network", "framework", "async", "futures"]
@@ -18,10 +18,13 @@ name = "actix_rt"
 path = "src/lib.rs"
 
 [dependencies]
-actix-threadpool = "0.1.1"
-futures = "0.1.25"
-tokio-current-thread = "0.1"
-tokio-executor = "0.1.5"
-tokio-reactor = "0.1.7"
-tokio-timer = "0.2.8"
+actix-threadpool = "0.2"
+futures = "0.3.1"
+
+# TODO: Replace this with dependency on tokio-runtime once it is ready
+tokio = { version = "0.2.0-alpha.6" }
+tokio-timer = "=0.3.0-alpha.6"
+tokio-executor = "=0.2.0-alpha.6"
+tokio-net = "=0.2.0-alpha.6"
+
 copyless = "0.1.4"
