--- a/actix-server-config/Cargo.toml
+++ b/actix-server-config/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "actix-server-config"
-version = "0.2.0"
+version = "0.3.0-alpha.1"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
 description = "Actix server config utils"
 homepage = "https://actix.rs"
@@ -14,25 +14,14 @@ name = "actix_server_config"
 path = "src/lib.rs"
 
 [package.metadata.docs.rs]
-features = ["ssl", "rust-tls", "uds"]
+features = ["openssl", "rustls"]
 
 [features]
 default = []
-
-# openssl
-ssl = ["tokio-openssl"]
-
-# rustls
-rust-tls = ["rustls", "tokio-rustls"]
-
-# unix domain sockets
-uds = ["tokio-uds"]
+openssl = ["tokio-openssl"]
+rustls = ["tokio-rustls"]
 
 [dependencies]
-futures = "0.1.25"
-tokio-io = "0.1.12"
-tokio-tcp = "0.1"
-tokio-openssl = { version="0.3.0", optional = true }
-rustls = { version = "0.16.0", optional = true }
-tokio-rustls = { version = "0.10.0", optional = true }
-tokio-uds = { version="0.2.5", optional = true }
+tokio = "0.2.0-alpha.6"
+tokio-openssl = { version = "0.4.0-alpha.6", optional = true }
+tokio-rustls = { version = "0.12.0-alpha.8", optional = true }
