--- a/actix-server/Cargo.toml
+++ b/actix-server/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "actix-server"
-version = "0.7.0"
+version = "0.8.0-alpha.1"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
 description = "Actix server - General purpose tcp server"
 keywords = ["network", "framework", "async", "futures"]
@@ -14,7 +14,7 @@ edition = "2018"
 workspace = ".."
 
 [package.metadata.docs.rs]
-features = ["ssl", "tls", "rust-tls", "uds"]
+features = ["nativetls", "openssl", "rustls", "uds"]
 
 [lib]
 name = "actix_server"
@@ -22,55 +22,47 @@ path = "src/lib.rs"
 
 [features]
 default = []
-
-# tls
-tls = ["native-tls"]
-
-# openssl
-ssl = ["openssl", "tokio-openssl", "actix-server-config/ssl"]
-
-# rustls
-rust-tls = ["rustls", "tokio-rustls", "webpki", "webpki-roots", "actix-server-config/rust-tls"]
-
-# uds
-uds = ["mio-uds", "tokio-uds", "actix-server-config/uds"]
+nativetls = ["native-tls", "tokio-tls"]
+openssl = ["open-ssl", "tokio-openssl", "actix-server-config/openssl"]
+rustls = ["rust-tls", "tokio-rustls", "webpki", "webpki-roots", "actix-server-config/rustls"]
 
 [dependencies]
-actix-rt = "0.2.2"
-actix-service = "0.4.1"
-actix-server-config = "0.2.0"
+actix-rt = "1.0.0-alpha.1"
+actix-service = "1.0.0-alpha.1"
+actix-server-config = "0.3.0-alpha.1"
 
 log = "0.4"
 num_cpus = "1.0"
-
+pin-project = "0.4.5"
 mio = "0.6.19"
 net2 = "0.2"
-futures = "0.1"
+futures = "0.3.1"
 slab = "0.4"
-tokio-io = "0.1"
-tokio-tcp = "0.1"
-tokio-timer = "0.2.8"
-tokio-reactor = "0.1"
-tokio-signal = "0.2"
+
+tokio = "0.2.0-alpha.6"
+tokio-io = "0.2.0-alpha.6"
+tokio-net = { version = "0.2.0-alpha.6", features = ["signal"] }
+tokio-timer = "0.3.0-alpha.6"
 
 # unix domain sockets
-mio-uds = { version="0.6.7", optional = true }
-tokio-uds = { version="0.2.5", optional = true }
+mio-uds = { version = "0.6.7", optional = true }
 
-# native-tls
-native-tls = { version="0.2", optional = true }
+# nativetls
+native-tls = { version = "0.2", optional = true }
+tokio-tls = { version = "0.3.0-alpha.6", optional = true }
 
 # openssl
-openssl = { version="0.10", optional = true }
-tokio-openssl = { version="0.3", optional = true }
+open-ssl = { version = "0.10", package = "openssl", optional = true }
+tokio-openssl = { version = "0.4.0-alpha.6", optional = true }
 
 # rustls
-rustls = { version = "0.16.0", optional = true }
-tokio-rustls = { version = "0.10.0", optional = true }
+rust-tls = { version = "0.16.0", package = "rustls", optional = true }
+# tokio-rustls = { version = "0.12.0-alpha.2", optional = true }
+tokio-rustls = { git = "https://github.com/quininer/tokio-rustls.git", branch = "tokio-0.2", optional = true }
 webpki = { version = "0.21", optional = true }
 webpki-roots = { version = "0.17", optional = true }
 
 [dev-dependencies]
 bytes = "0.4"
-actix-codec = "0.1.2"
+actix-codec = "0.2.0-alpha.1"
 env_logger = "0.6"
