--- a/actix-test-server/Cargo.toml
+++ b/actix-test-server/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "actix-test-server"
-version = "0.2.3"
+version = "0.2.2"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
 description = "Actix test server"
 keywords = ["network", "framework", "async", "futures"]
@@ -11,10 +11,26 @@ categories = ["network-programming", "asynchronous"]
 license = "MIT/Apache-2.0"
 exclude = [".gitignore", ".travis.yml", ".cargo/config", "appveyor.yml"]
 edition = "2018"
+workspace = ".."
+
+[package.metadata.docs.rs]
+features = ["ssl", "tls", "rust-tls"]
 
 [lib]
 name = "actix_test_server"
 path = "src/lib.rs"
+
+[features]
+default = []
+
+# tls
+tls = ["native-tls", "actix-server/tls"]
+
+# openssl
+ssl = ["openssl", "actix-server/ssl"]
+
+# rustls
+rust-tls = ["rustls", "tokio-rustls", "webpki", "webpki-roots"]
 
 [dependencies]
 actix-rt = "0.2.1"
@@ -24,9 +40,21 @@ actix-testing = "0.1.0"
 
 log = "0.4"
 net2 = "0.2"
-futures = "0.1"
-tokio-tcp = "0.1"
-tokio-reactor = "0.1"
+futures = { package = "futures-preview", version = "0.3.0-alpha.18"}
+tokio-io = "0.2.0-alpha.4"
+tokio-net = "0.2.0-alpha.4"
+
+# native-tls
+native-tls = { version="0.2", optional = true }
+
+# openssl
+openssl = { version="0.10", optional = true }
+
+#rustls
+rustls = { version = "^0.16", optional = true }
+tokio-rustls = { version = "^0.12.0-alpha.2", optional = true }
+webpki = { version = "0.21", optional = true }
+webpki-roots = { version = "0.17", optional = true }
 
 [dev-dependencies]
 actix-service = "0.4.0"
