--- a/actix-server-config/Cargo.toml
+++ b/actix-server-config/Cargo.toml
@@ -22,6 +22,7 @@ openssl = ["tokio-openssl"]
 rustls = ["tokio-rustls"]
 
 [dependencies]
-tokio = "0.2.0-alpha.6"
+tokio-io = "0.2.0-alpha.6"
+tokio-net = "0.2.0-alpha.6"
 tokio-openssl = { version = "0.4.0-alpha.6", optional = true }
 tokio-rustls = { version = "0.12.0-alpha.8", optional = true }
