update test-server tests

--- a/actix-http/Cargo.toml
+++ b/actix-http/Cargo.toml
@@ -109,17 +109,22 @@ webpki-roots = { version = "0.18", optional = true }
 actix-rt = "1.0.0-alpha.1"
 actix-server = { version = "0.8.0-alpha.1", features=["openssl"] }
 actix-connect = { version = "1.0.0-alpha.1", features=["openssl"] }
-#actix-http-test = { version = "0.2.4", features=["ssl"] }
+actix-http-test = { version = "0.3.0-alpha.1", features=["openssl"] }
 env_logger = "0.6"
 serde_derive = "1.0"
 open-ssl = { version="0.10", package="openssl" }
 
 [patch.crates-io]
+awc = { path = "../awc" }
+actix-http = { path = "." }
+actix-http-test = { path = "../test-server" }
+
 actix-codec = { path = "../../actix-net/actix-codec" }
 actix-connect = { path = "../../actix-net/actix-connect" }
 actix-rt = { path = "../../actix-net/actix-rt" }
 actix-server = { path = "../../actix-net/actix-server" }
 actix-server-config = { path = "../../actix-net/actix-server-config" }
 actix-service = { path = "../../actix-net/actix-service" }
+actix-testing = { path = "../../actix-net/actix-testing" }
 actix-threadpool = { path = "../../actix-net/actix-threadpool" }
 actix-utils = { path = "../../actix-net/actix-utils" }
