--- a/actix-codec/Cargo.toml
+++ b/actix-codec/Cargo.toml
@@ -19,8 +19,8 @@ path = "src/lib.rs"
 
 [dependencies]
 bytes = "0.4.12"
-pin-utils = "0.1.0-alpha.4"
 futures = "0.3.1"
+pin-project = "0.4.5"
 tokio-io = "0.2.0-alpha.6"
 tokio-codec = "0.2.0-alpha.6"
 log = "0.4"
