--- a/actix-ioframe/Cargo.toml
+++ b/actix-ioframe/Cargo.toml
@@ -24,6 +24,7 @@ actix-utils = "0.5.0-alpha.1"
 bytes = "0.4"
 either = "1.5.2"
 futures = "0.3.1"
+pin-project = "0.4.5"
 tokio-executor = "=0.2.0-alpha.6"
 log = "0.4"
 
