--- a/actix-service/Cargo.toml
+++ b/actix-service/Cargo.toml
@@ -24,7 +24,8 @@ path = "src/lib.rs"
 
 [dependencies]
 futures = "0.3.1"
+pin-project = "0.4.5"
 
 [dev-dependencies]
-tokio = "0.2.0-alpha.5"
+tokio = "0.2.0-alpha.6"
 actix-rt = "0.2"
