--- a/actix-framed/Cargo.toml
+++ b/actix-framed/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "actix-framed"
-version = "0.2.1"
+version = "0.3.0-alpha.1"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
 description = "Actix framed app server"
 readme = "README.md"
@@ -20,19 +20,19 @@ name = "actix_framed"
 path = "src/lib.rs"
 
 [dependencies]
-actix-codec = "0.1.2"
-actix-service = "0.4.1"
+actix-codec = "0.2.0-alpha.1"
+actix-service = "1.0.0-alpha.1"
 actix-router = "0.1.2"
-actix-rt = "0.2.2"
-actix-http = "0.2.7"
-actix-server-config = "0.1.2"
+actix-rt = "1.0.0-alpha.1"
+actix-http = "0.3.0-alpha.1"
+actix-server-config = "0.2.0-alpha.1"
 
 bytes = "0.4"
 futures = "0.1.25"
 log = "0.4"
 
 [dev-dependencies]
-actix-server = { version = "0.6.0", features=["ssl"] }
-actix-connect = { version = "0.2.0", features=["ssl"] }
-actix-http-test = { version = "0.2.4", features=["ssl"] }
-actix-utils = "0.4.4"
+actix-server = { version = "0.8.0-alpha.1", features=["openssl"] }
+actix-connect = { version = "0.3.0-alpha.1", features=["openssl"] }
+actix-http-test = { version = "0.3.0-alpha.1", features=["openssl"] }
+actix-utils = "0.5.0-alpha.1"
