--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "actix-web"
-version = "1.0.9"
+version = "2.0.0-alpha.1"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
 description = "Actix web is a simple, pragmatic and extremely fast web framework for Rust."
 readme = "README.md"
@@ -16,7 +16,7 @@ exclude = [".gitignore", ".travis.yml", ".cargo/config", "appveyor.yml"]
 edition = "2018"
 
 [package.metadata.docs.rs]
-features = ["ssl", "brotli", "flate2-zlib", "secure-cookies", "client", "rust-tls", "uds"]
+features = ["openssl", "rustls", "brotli", "flate2-zlib", "secure-cookies", "client"]
 
 [badges]
 travis-ci = { repository = "actix/actix-web", branch = "master" }
@@ -28,20 +28,19 @@ path = "src/lib.rs"
 
 [workspace]
 members = [
-#   ".",
-#   "awc",
-#   #"actix-http",
-#   "actix-cors",
-#   "actix-files",
-#   "actix-framed",
-#   "actix-session",
-#   "actix-identity",
-#   "actix-multipart",
-#   "actix-web-actors",
-#   "actix-web-codegen",
-#   "test-server",
+  ".",
+  "awc",
+  "actix-http",
+  "actix-cors",
+  "actix-files",
+  "actix-framed",
+  "actix-session",
+  "actix-identity",
+  "actix-multipart",
+  "actix-web-actors",
+  "actix-web-codegen",
+  "test-server",
 ]
-exclude = ["awc", "actix-http", "test-server"]
 
 [features]
 default = ["brotli", "flate2-zlib", "client", "fail"]
@@ -64,37 +63,35 @@ secure-cookies = ["actix-http/secure-cookies"]
 fail = ["actix-http/fail"]
 
 # openssl
-ssl = ["openssl", "actix-server/ssl", "awc/ssl"]
+openssl = ["open-ssl", "actix-server/openssl", "awc/openssl"]
 
 # rustls
-rust-tls = ["rustls", "actix-server/rust-tls", "awc/rust-tls"]
-
-# unix domain sockets support
-uds = ["actix-server/uds"]
+rustls = ["rust-tls", "actix-server/rustls", "awc/rustls"]
 
 [dependencies]
-actix-codec = "0.1.2"
-actix-service = "0.4.1"
-actix-utils = "0.4.4"
+actix-codec = "0.2.0-alpha.1"
+actix-service = "1.0.0-alpha.1"
+actix-utils = "0.5.0-alpha.1"
 actix-router = "0.1.5"
-actix-rt = "0.2.4"
+actix-rt = "1.0.0-alpha.1"
 actix-web-codegen = "0.1.2"
-actix-http = "0.2.11"
-actix-server = "0.6.1"
-actix-server-config = "0.1.2"
-actix-testing = "0.1.0"
-actix-threadpool = "0.1.1"
-awc = { version = "0.2.7", optional = true }
+actix-http = "0.3.0-alpha.1"
+actix-server = "0.8.0-alpha.1"
+actix-server-config = "0.3.0-alpha.1"
+actix-testing = "0.3.0-alpha.1"
+actix-threadpool = "0.2.0-alpha.1"
+awc = { version = "0.3.0-alpha.1", optional = true }
 
 bytes = "0.4"
 derive_more = "0.15.0"
 encoding_rs = "0.8"
-futures = "0.1.25"
+futures = "0.3.1"
 hashbrown = "0.6.3"
 log = "0.4"
 mime = "0.3"
 net2 = "0.2.33"
 parking_lot = "0.9"
+pin-project = "0.4.5"
 regex = "1.0"
 serde = { version = "1.0", features=["derive"] }
 serde_json = "1.0"
@@ -103,17 +100,17 @@ time = "0.1.42"
 url = "2.1"
 
 # ssl support
-openssl = { version="0.10", optional = true }
-rustls = { version = "0.15", optional = true }
+open-ssl = { version="0.10", package="openssl", optional = true }
+rust-tls = { version = "0.16", package="rustls", optional = true }
 
 [dev-dependencies]
-actix = "0.8.3"
-actix-connect = "0.2.2"
-actix-http-test = "0.2.4"
+# actix = "0.8.3"
+actix-connect = "0.3.0-alpha.1"
+actix-http-test = "0.3.0-alpha.1"
 rand = "0.7"
 env_logger = "0.6"
 serde_derive = "1.0"
-tokio-timer = "0.2.8"
+tokio-timer = "0.3.0-alpha.6"
 brotli2 = "0.3.2"
 flate2 = "1.0.2"
 
@@ -123,19 +120,18 @@ opt-level = 3
 codegen-units = 1
 
 [patch.crates-io]
-# actix-web = { path = "." }
-# actix-http = { path = "actix-http" }
-# actix-http-test = { path = "test-server" }
-# actix-web-codegen = { path = "actix-web-codegen" }
+actix-web = { path = "." }
+actix-http = { path = "actix-http" }
+actix-http-test = { path = "test-server" }
+actix-web-codegen = { path = "actix-web-codegen" }
 # actix-web-actors = { path = "actix-web-actors" }
-# actix-session = { path = "actix-session" }
-# actix-files = { path = "actix-files" }
-# actix-multipart = { path = "actix-multipart" }
-# awc = { path = "awc" }
+actix-session = { path = "actix-session" }
+actix-files = { path = "actix-files" }
+actix-multipart = { path = "actix-multipart" }
+awc = { path = "awc" }
 
 actix-codec = { path = "../actix-net/actix-codec" }
 actix-connect = { path = "../actix-net/actix-connect" }
-actix-ioframe = { path = "../actix-net/actix-ioframe" }
 actix-rt = { path = "../actix-net/actix-rt" }
 actix-server = { path = "../actix-net/actix-server" }
 actix-server-config = { path = "../actix-net/actix-server-config" }
