--- a/actix-cors/Cargo.toml
+++ b/actix-cors/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "actix-cors"
-version = "0.1.0"
+version = "0.2.0-alpha.1"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
 description = "Cross-origin resource sharing (CORS) for Actix applications."
 readme = "README.md"
@@ -10,14 +10,14 @@ repository = "https://github.com/actix/actix-web.git"
 documentation = "https://docs.rs/actix-cors/"
 license = "MIT/Apache-2.0"
 edition = "2018"
-#workspace = ".."
+workspace = ".."
 
 [lib]
 name = "actix_cors"
 path = "src/lib.rs"
 
 [dependencies]
-actix-web = "1.0.0"
-actix-service = "0.4.0"
+actix-web = "2.0.0-alpha.1"
+actix-service = "1.0.0-alpha.1"
 derive_more = "0.15.0"
-futures = "0.1.25"
+futures = "0.3.1"
