--- a/actix-identity/Cargo.toml
+++ b/actix-identity/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "actix-identity"
-version = "0.1.0"
+version = "0.2.0-alpha.1"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
 description = "Identity service for actix web framework."
 readme = "README.md"
@@ -17,14 +17,14 @@ name = "actix_identity"
 path = "src/lib.rs"
 
 [dependencies]
-actix-web = { version = "1.0.0", default-features = false, features = ["secure-cookies"] }
-actix-service = "0.4.0"
-futures = "0.1.25"
+actix-web = { version = "2.0.0-alpha.1", default-features = false, features = ["secure-cookies"] }
+actix-service = "1.0.0-alpha.1"
+futures = "0.3.1"
 serde = "1.0"
 serde_json = "1.0"
 time = "0.1.42"
 
 [dev-dependencies]
-actix-rt = "0.2.2"
-actix-http = "0.2.3"
+actix-rt = "1.0.0-alpha.1"
+actix-http = "0.3.0-alpha.1"
 bytes = "0.4"
