--- a/actix-multipart/Cargo.toml
+++ b/actix-multipart/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "actix-multipart"
-version = "0.1.4"
+version = "0.2.0-alpha.1"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
 description = "Multipart support for actix web framework."
 readme = "README.md"
@@ -18,17 +18,17 @@ name = "actix_multipart"
 path = "src/lib.rs"
 
 [dependencies]
-actix-web = { version = "1.0.0", default-features = false }
-actix-service = "0.4.1"
+actix-web = { version = "2.0.0-alpha.1", default-features = false }
+actix-service = "1.0.0-alpha.1"
 bytes = "0.4"
 derive_more = "0.15.0"
 httparse = "1.3"
-futures = "0.1.25"
+futures = "0.3.1"
 log = "0.4"
 mime = "0.3"
 time = "0.1"
 twoway = "0.2"
 
 [dev-dependencies]
-actix-rt = "0.2.2"
-actix-http = "0.2.4"
+actix-rt = "1.0.0-alpha.1"
+actix-http = "0.3.0-alpha.1"
