--- a/actix-identity/Cargo.toml
+++ b/actix-identity/Cargo.toml
@@ -17,14 +17,14 @@ name = "actix_identity"
 path = "src/lib.rs"
 
 [dependencies]
-actix-web = { version = "1.0.9", default-features = false, features = ["secure-cookies"] }
-actix-service = "0.4.2"
+actix-web = { version = "2.0.0-alpha.1", default-features = false, features = ["secure-cookies"] }
+actix-service = "1.0.0-alpha.1"
 futures = "0.3.1"
 serde = "1.0"
 serde_json = "1.0"
 time = "0.1.42"
 
 [dev-dependencies]
-actix-rt = "0.2.2"
-actix-http = "0.2.11"
+actix-rt = "1.0.0-alpha.1"
+actix-http = "0.3.0-alpha.1"
 bytes = "0.4"
