--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ members = [
   "awc",
   "actix-http",
   "actix-cors",
-  #"actix-files",
+  "actix-files",
   #"actix-framed",
   #"actix-session",
   "actix-identity",
@@ -126,7 +126,7 @@ actix-http-test = { path = "test-server" }
 actix-web-codegen = { path = "actix-web-codegen" }
 # actix-web-actors = { path = "actix-web-actors" }
 # actix-session = { path = "actix-session" }
-# actix-files = { path = "actix-files" }
+actix-files = { path = "actix-files" }
 # actix-multipart = { path = "actix-multipart" }
 awc = { path = "awc" }
 
