--- a/actix-web-codegen/Cargo.toml
+++ b/actix-web-codegen/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "actix-web-codegen"
-version = "0.1.3"
+version = "0.2.0-alpha.1"
 description = "Actix web proc macros"
 readme = "README.md"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
@@ -17,7 +17,7 @@ syn = { version = "1", features = ["full", "parsing"] }
 proc-macro2 = "1"
 
 [dev-dependencies]
-actix-web = { version = "1.0.0" }
-actix-http = { version = "0.2.4", features=["ssl"] }
-actix-http-test = { version = "0.2.0", features=["ssl"] }
-futures = { version = "0.1" }
+actix-web = { version = "2.0.0-alph.a" }
+actix-http = { version = "0.3.0-alpha.1", features=["openssl"] }
+actix-http-test = { version = "0.3.0-alpha.1", features=["openssl"] }
+futures = { version = "0.3.1" }
