--- a/Cargo.toml
+++ b/Cargo.toml
@@ -74,7 +74,7 @@ actix-service = "1.0.0-alpha.1"
 actix-utils = "0.5.0-alpha.1"
 actix-router = "0.1.5"
 actix-rt = "1.0.0-alpha.1"
-actix-web-codegen = "0.1.2"
+actix-web-codegen = "0.2.0-alpha.1"
 actix-http = "0.3.0-alpha.1"
 actix-server = "0.8.0-alpha.1"
 actix-server-config = "0.3.0-alpha.1"
